--- a/index.html
+++ b/index.html
@@ -1,15 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE-edge,chrome-1">
+	<title>个人简历</title>
+	<link rel="stylesheet" href="css/pagesstyle.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 992px)" href="css/pagesstyle-pc.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-width: 768px) and (max-width: 991px)" href="css/pagesstyle-pad.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-width: 767px)" href="css/pagesstyle-phone.css">
+
 </head>
 <body>
-	<div style="background: red; width: 200px; height: 100px;" id="div1">
-		<span>aa</span>
+	<div id="header">
+		<div id="nav">
+			<div id="logo"><h1>mylogo</h1></div>
+			<ul>
+				<li>首页</li>
+				<li>关于</li>
+				<li>技能</li>
+				<li>项目</li>
+				<li>联系</li>
+			</ul>
+			<div id="nav-phone"><img src="images/caidan.gif" alt="菜单"></div>
+			<input type="text" class="search" name="search" value="搜索">
+			<div id="search-btn"><img src="images/search.png" alt="搜索"></div>
+		</div>
 	</div>
-	<input type="button" value="获取">
-	<a href="dd.html">W3School</a>
+	<div id="banner">
+		<div class="tit">
+			<h1>我的个人简历</h1>
+			<p>持之以恒 坚持奋斗</p>
+			<input type="button" name="button" value="Frok me on GitHub">
+		</div>
+		<img src="images/banner-in.jpg" alt="banner">
+	</div>
+	<!-- about -->
+	<div id="about">
+		<div id="title"><h2>关于</h2><p>ABOUT ME</p></div>
+		<div class="int"><h3>关于我自己的介绍</h3><p>2017-1-6</p>今天为大家分享Photoshop将普通照片快速制作二次元漫画风格效果，教程很不错，对于喜欢漫画的朋友可以参考本文，希望能对大家有所帮助！ 一提到日本动画电影，大家第一印象肯定是宫崎骏，但是日本除了宫崎骏还有一位风格独树一帜的映像作家——新海诚，他的画风细腻唯美，几乎每一帧画面都可以截图作为壁纸今天为大家分享Photoshop将普通照片快速制作二次元漫画风格效果，教程很不错，对于喜欢漫画的朋友可以参考本文，希望能对大家有所帮助！ 一提到日本动画电影，大家第一印象肯定是宫崎骏，但是日本除了宫崎骏还有一位风格独树一帜的映像作家——新海诚，他的画风细腻唯美，几乎每一帧画面都可以截图作为壁纸
+		</div>
+		<img src="images/about.jpg" alt="about">
+		<div id="edu">
+			<div class="fig">
+				<h3>教育经历</h3>
+				<div class="mod">
+					<h2>2015</h2>
+					<span>
+						<h4>自学前端开发</h4>
+						<p>学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术</p>
+					</span>
+				</div>
+				<div class="mod">
+					<h2>2014</h2>
+					<span>
+						<h4>毕业于广西民师院</h4>
+						<p>计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术</p>
+					</span>
+				</div>
+			</div>
+		</div>
+		<div id="jobs">
+			<div class="fig">
+				<h3>工作经历</h3>
+				<div class="mod">
+					<h2>2016</h2>
+					<span>
+						<h4>北京医模科技</h4>
+						<p>软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师</p>
+					</span>
+				</div>
+				<div class="mod">
+					<h2>2014</h2>
+					<span>
+						<h4>东莞天助网络科技</h4>
+						<p>网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师</p>
+					</span>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	<!-- sklls -->
+	<div id="sklls">
+		<div id="title"><h2>技能</h2><p>SKILLS</p></div>
+		<div class="sklls-list">
+			<div class="sk-li">
+				<p>Html</p>
+				<div class="box">
+					<div class="drag html"></div>
+				</div>
+			</div>
+			<div class="sk-li">
+				<p>Css</p>
+				<div class="box">
+					<div class="drag css"></div>
+				</div>
+			</div>
+			<div class="sk-li">
+				<p>JavaScript</p>
+				<div class="box">
+					<div class="drag js"></div>
+				</div>
+			</div>
+			<div class="sk-li">
+				<p>Jquery</p>
+				<div class="box">
+					<div class="drag jq"></div>
+				</div>
+			</div>
+			<div class="sk-li">
+				<p>Bootstrap</p>
+				<div class="box">
+					<div class="drag bootstrap"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- project -->
+	<div id="project">
+		<div id="title"><h2>项目</h2><p>PROJECT</p></div>
+		<div class="picgro">
+			<ul>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+			</ul>
+		</div>
+	</div>
+	<!-- CONTACT -->
+	<div id="contact">
+		<div id="title"><h2>联系</h2><p>CONTACT</p>
+		</div>
+			<div class="name"><h2>韦双武</h2>
+				联系电话：13553875200</br>
+				QQ：2575650480</br>
+				邮箱：2575650480@qq.com</br>
+				地址：广东东莞市长安
+				<ul>
+					<li><img src="images/qq.gif" alt="qq"></li>
+					<li><img src="images/weixin.gif" alt="weixin"></li>
+					<li><img src="images/weibo.gif" alt="weibo"></li>
+				</ul>
+			</div>
+			<img src="images/code.jpg"  alt="pic" class="code">
+		</div>
+		<div id="fooder">
+			Copyright © 2017.name All rights reserved.More Templates
+		</div>
+
 </body>
 </html>
