--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 					<h2>2015</h2>
 					<span>
 						<h4>自学前端开发</h4>
-						<p>学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术</p>
+						<p>学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/</p>
 					</span>
 				</div>
 				<div class="mod">
 					<h2>2014</h2>
 					<span>
 						<h4>毕业于广西民师院</h4>
-						<p>计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术</p>
+						<p>计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算</p>
 					</span>
 				</div>
 			</div>
@@ -67,14 +67,14 @@
 					<h2>2016</h2>
 					<span>
 						<h4>北京医模科技</h4>
-						<p>软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师</p>
+						<p>软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开</p>
 					</span>
 				</div>
 				<div class="mod">
 					<h2>2014</h2>
 					<span>
 						<h4>东莞天助网络科技</h4>
-						<p>网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师</p>
+						<p>网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销</p>
 					</span>
 				</div>
 			</div>
@@ -138,6 +138,8 @@
 			<div class="name"><h2>韦双武</h2>
 				联系电话：13553875200</br>
 				QQ：2575650480</br>
+				我的博客：<a href="https://www.cnblogs.com/wswq">https://www.cnblogs.com/wswq</a></br>
+				我的GitHub：<a href="https://github.com/wsw1125">https://github.com/wsw1125</a></br>
 				邮箱：2575650480@qq.com</br>
 				地址：广东东莞市长安
 				<ul>
