--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="header">
 		<div id="nav">
-			<div id="logo"><h1>mylogo</h1></div>
+			<div id="logo"><a href="index.html"><h1>Myself</h1></a></div>
 			<ul>
 				<li>首页</li>
 				<li>关于</li>
