--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 		<div id="nav">
 			<div id="logo"><a href="index.html"><h1>Myself</h1></a></div>
 			<ul>
-				<li>首页</li>
-				<li>关于</li>
-				<li>技能</li>
-				<li>项目</li>
-				<li>联系</li>
+				<li><a href="#header">首页</a></li>
+				<li><a href="#about">关于</a></li>
+				<li><a href="#sklls">技能</a></li>
+				<li><a href="#project">项目</a></li>
+				<li><a href="#contact">联系</a></li>
 			</ul>
-			<div id="nav-phone"><img src="images/caidan.gif" alt="菜单"></div>
 			<input type="text" class="search" name="search" value="搜索">
 			<div id="search-btn"><img src="images/search.png" alt="搜索"></div>
 		</div>
@@ -31,15 +30,14 @@
 		<div class="tit">
 			<h1>我的个人简历</h1>
 			<p>持之以恒 坚持奋斗</p>
-			<input type="button" name="button" value="Frok me on GitHub">
+			<a target="_blank" href="https://github.com/wsw1125">Frok me on GitHub</a>
 		</div>
 		<img src="images/banner-in.jpg" alt="banner">
 	</div>
 	<!-- about -->
 	<div id="about">
 		<div id="title"><h2>关于</h2><p>ABOUT ME</p></div>
-		<div class="int"><h3>关于我自己的介绍</h3><p>2017-1-6</p>今天为大家分享Photoshop将普通照片快速制作二次元漫画风格效果，教程很不错，对于喜欢漫画的朋友可以参考本文，希望能对大家有所帮助！ 一提到日本动画电影，大家第一印象肯定是宫崎骏，但是日本除了宫崎骏还有一位风格独树一帜的映像作家——新海诚，他的画风细腻唯美，几乎每一帧画面都可以截图作为壁纸今天为大家分享Photoshop将普通照片快速制作二次元漫画风格效果，教程很不错，对于喜欢漫画的朋友可以参考本文，希望能对大家有所帮助！ 一提到日本动画电影，大家第一印象肯定是宫崎骏，但是日本除了宫崎骏还有一位风格独树一帜的映像作家——新海诚，他的画风细腻唯美，几乎每一帧画面都可以截图作为壁纸
-		</div>
+		<div class="int"><h3>关于我自己的介绍</h3><p>2017-1-6</p>本人大专学历，计算机专业，从事过软件开发相关方面的工作，工作中主要负责的是软件前端界面的设计以及一些交互动画的制作工作。我对web前端开发有这浓厚的兴趣梦想有一天能够成为一名专业的前端开发工程师，工作之余我通过看视频以及看书来学习HTML、css、JavaScript等方面的知识。为了学习我在网上收集过很多视频教程，看过智能社的javascript教程这套教程很经典使我走进了web开发的大门，看过《网易云课堂》、《慕课网》、《百度传课》等等里面的一些我觉得有用的视频都看过，我的百度网盘里面也保存了很多教程有的还没来得及看。除了视频我也买过一些书籍《dom编程艺术》《JavaScript高级教程》《锋利的jQuery》，为了更好的掌握我自己也喜欢找一些项目用上所学的知识来练习，在做项目的过程中我也不断在总结经验，思考怎样才能写出高质量的代码。目前我想能够尽快找到一份前端开发的工作，能够使自己有更大的进步。</div>
 		<img src="images/about.jpg" alt="about">
 		<div id="edu">
 			<div class="fig">
@@ -48,14 +46,14 @@
 					<h2>2015</h2>
 					<span>
 						<h4>自学前端开发</h4>
-						<p>学习html/css/javascript/jquery等前端技术学习html/css/javascript/jquery等前端技术学习html/css/javascript/</p>
+						<p>学习html/css/javascript/jquery等前端技术，边工作边学习，通过模仿项目来练习掌握前端开发必备的知识。</p>
 					</span>
 				</div>
 				<div class="mod">
 					<h2>2014</h2>
 					<span>
 						<h4>毕业于广西民师院</h4>
-						<p>计算机应用相关技术计算机应用相关技术计算机应用相关技术计算机应用相关技术计算</p>
+						<p>在校期间通过学习掌握了计算机应用基础知识，学习了C语言和Java等编程方面的基础知识以及学习了Photoshop、 Flash等图形图像方面的知识，具备了计算机专业所需的专业知识。</p>
 					</span>
 				</div>
 			</div>
@@ -67,14 +65,24 @@
 					<h2>2016</h2>
 					<span>
 						<h4>北京医模科技</h4>
-						<p>软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开发工程师软件开</p>
+						<p>
+							在该公司主要负责软件界面的UI以及交互动画的设计
+							1、对项目需求进行分析与后端工程师进行沟通确定项目具体开发方案；
+							2、确定界面的设计元素以及如何与后台数据进行通信；
+							3、根据医学组的评估要求对项目进行优化和修改。
+						</p>
 					</span>
 				</div>
 				<div class="mod">
 					<h2>2014</h2>
 					<span>
 						<h4>东莞天助网络科技</h4>
-						<p>网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销售工程师网站销</p>
+						<p>
+							在该公司主要负责销售
+							1、通过电话或者QQ、微信等寻找客户与客户沟通约见洽谈；
+							2、电话联系好之后主动上门见客户，了解客户的需求为客户制定解决方案；
+							3、了解客户需求之后帮助客户制定详细的合作计划给客户提供一套合适的方案。
+						</p>
 					</span>
 				</div>
 			</div>
@@ -122,12 +130,12 @@
 		<div id="title"><h2>项目</h2><p>PROJECT</p></div>
 		<div class="picgro">
 			<ul>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
-				<li><a href="##"><img src="images/img13.jpg" alt="pic"></a></li>
+				<li><a target="_blank" href="https://wsw1125.github.io/page2/"><img src="images/pic1.jpg" alt="pic"><p>仿优艺客</p></a></li>
+				<li><a target="_blank" href="https://wsw1125.github.io/wswpages/antiBlog.html"><img src="images/pic2.jpg" alt="pic"><p>仿新浪微博</p></a></li>
+				<li><a target="_blank" href="##"><img src="images/pic3.jpg" alt="pic"><p>bootstrap企业网站</p></a></li>
+				<li><a target="_blank" href="https://wsw1125.github.io/wswpages/"><img src="images/pic4.jpg" alt="pic"><p>单页个人网站</p></a></li>
+				<li><a target="_blank" href="https://www.cnblogs.com/wswq"><img src="images/pic5.jpg" alt="pic"><p>我的博客</p></a></li>
+				<li><a target="_blank" href="##"><img src="images/pic6.jpg" alt="pic"><p>个人简历网站</p></a></li>
 			</ul>
 		</div>
 	</div>
@@ -138,21 +146,65 @@
 			<div class="name"><h2>韦双武</h2>
 				联系电话：13553875200</br>
 				QQ：2575650480</br>
-				我的博客：<a href="https://www.cnblogs.com/wswq">https://www.cnblogs.com/wswq</a></br>
-				我的GitHub：<a href="https://github.com/wsw1125">https://github.com/wsw1125</a></br>
+				我的博客：<a target="_blank" href="https://www.cnblogs.com/wswq">https://www.cnblogs.com/wswq</a></br>
+				我的GitHub：<a target="_blank" href="https://github.com/wsw1125">https://github.com/wsw1125</a></br>
 				邮箱：2575650480@qq.com</br>
 				地址：广东东莞市长安
-				<ul>
-					<li><img src="images/qq.gif" alt="qq"></li>
-					<li><img src="images/weixin.gif" alt="weixin"></li>
-					<li><img src="images/weibo.gif" alt="weibo"></li>
-				</ul>
 			</div>
 			<img src="images/code.jpg"  alt="pic" class="code">
 		</div>
 		<div id="fooder">
 			Copyright © 2017.name All rights reserved.More Templates
 		</div>
+		<div id="gotop"><img src="images/top.png" alt="top" title="返回顶部"></div>
+		<script>
+			window.onload=function(){
+				var scrollTop=document.documentElement.scrollTop||document.body.scrollTop;
+				var gotop=document.getElementById('gotop');
+				var timer=null; //定义一个定时器
+				var isTop=true; //定义一个布尔值，用于判断是否到达顶部
+				isgoto();
+				window.onscroll=function(){
+					scrollTop=document.documentElement.scrollTop||document.body.scrollTop;
+					isgoto()
+					if(!isTop){
+						clearInterval(timer);
+			        }
+			        isTop=false;
+				};
+				function isgoto(){
+					if(scrollTop>=200){
+						gotop.style.display='block';
+					}else{
+						gotop.style.display='none';
+					}
 
+				}
+				gotop.onclick=function(){
+					timer=setInterval(function(){
+						var scTops=document.documentElement.scrollTop||document.body.scrollTop;
+						var speed=Math.floor(-scTops / 6);
+						document.documentElement.scrollTop=document.body.scrollTop=scTops+speed;
+						isTop=true;  //用于阻止滚动事件清除定时器
+						if(scTops==0){
+			                clearInterval(timer);
+			            }
+					},30);
+				};
+				var hea=document.getElementById('header');
+				var searchs=hea.getElementsByTagName('input')[0];
+			
+				searchs.onfocus=function(){
+					if(this.value=='搜索'){
+						this.value='';
+					}
+				};
+				searchs.onblur=function(){
+					if(this.value==''){
+						this.value='搜索';
+					}
+				};
+			}
+		</script>
 </body>
 </html>
